Require css values from from: and to:, and update tests to reflect this.

--- a/test-fill-values.html
+++ b/test-fill-values.html
@@ -43,7 +43,7 @@ var divs = document.querySelectorAll(".anim");
 var group = new ParAnimGroup({startDelay: 1, iterationDuration: 4}, undefined, 1);
 
 for (var i = 0; i < fills.length; i++) {
-	var anim = new Anim(divs[i], {startDelay: 1, iterationDuration: 1, fill: fills[i], prop: "left", from: 100, to: 200}, group, 1);
+	var anim = new Anim(divs[i], {startDelay: 1, iterationDuration: 1, fill: fills[i], prop: "left", from: "100px", to: "200px"}, group, 1);
 }
 
 </script>
