--- a/test-keyframe-creation.html
+++ b/test-keyframe-creation.html
@@ -28,7 +28,7 @@
 <script src="web-animation.js"></script>
 <script>
 
-new Anim(document.querySelector("#a"), {startDelay: 1, iterationDuration: 1, prop: "left", from: 100, to: 200});
-new Anim(document.querySelector("#b"), {startDelay: 1, iterationDuration: 1, prop: "left", to: 200});
+new Anim(document.querySelector("#a"), {startDelay: 1, iterationDuration: 1, prop: "left", from: "100px", to: "200px"});
+new Anim(document.querySelector("#b"), {startDelay: 1, iterationDuration: 1, prop: "left", to: "200px"});
 
 </script>
