--- a/web-animation-test.html
+++ b/web-animation-test.html
@@ -57,19 +57,12 @@
 <script src="web-animation.js"></script>
 <script>
 
-function keyframesFor(property, startVal, endVal) {
-	var animFun = new KeyframesAnimFunction(property);
-	animFun.frames.add(new AnimFrame(startVal, 0));
-	animFun.frames.add(new AnimFrame(endVal, 1));
-	return animFun;
-}
-
-var anim = new Anim(document.querySelector(".anim"), {startDelay: 2, iterationDuration: 4, prop: "left", from: 100, to: 200}, undefined, 1);
+var anim = new Anim(document.querySelector(".anim"), {startDelay: 2, iterationDuration: 4, prop: "left", from: "100px", to: "200px"}, undefined, 1);
 
 
-var up = new AnimTemplate({animFunc: keyframesFor("top", 200, 0), timing: new Timing(0, 1)}, "selector: .top");
-var right = new AnimTemplate({animFunc: keyframesFor("left", 0, 200), timing: new Timing(0.5, 1)}, "selector: .right");
-var down = new AnimTemplate({animFunc: keyframesFor("top", 0, 200), timing: new Timing(1, 1)}, "selector: .down");
+var up = new AnimTemplate({animFunc: keyframesFor("top", "200px", "0px"), timing: new Timing(0, 1)}, "selector: .top");
+var right = new AnimTemplate({animFunc: keyframesFor("left", "0px", "200px"), timing: new Timing(0.5, 1)}, "selector: .right");
+var down = new AnimTemplate({animFunc: keyframesFor("top", "0px", "200px"), timing: new Timing(1, 1)}, "selector: .down");
 
 var group = new ParAnimGroupTemplate({});
 group.add(up, right, down);
@@ -78,20 +71,10 @@ group.add(up, right, down);
 group.animate(document.querySelector(".group"), 0);
 
 var group = new SeqAnimGroupTemplate({});
-group.add(new AnimTemplate({animFunc: keyframesFor("left", 100, 150), timing: new Timing(0, 1)}, "target: a"));
-group.add(new AnimTemplate({animFunc: keyframesFor("left", 100, 150), timing: new Timing(0, 1)}, "target: b"));
-group.add(new AnimTemplate({animFunc: keyframesFor("left", 100, 150), timing: new Timing(0, 1)}, "target: c"));
+group.add(new AnimTemplate({animFunc: keyframesFor("left", "100px", "150px"), timing: new Timing(0, 1)}, "target: a"));
+group.add(new AnimTemplate({animFunc: keyframesFor("left", "100px", "150px"), timing: new Timing(0, 1)}, "target: b"));
+group.add(new AnimTemplate({animFunc: keyframesFor("left", "100px", "150px"), timing: new Timing(0, 1)}, "target: c"));
 
 group.animate([], 0);
-
-// group
-//   anim selector: .foo
-//   anim target: bar
-
-// GroupTemplate : ([AnimTemplate], Timing)
-// AnimTemplate (Timing, AnimFunction, ResolutionStrategy)
-
-// GroupTemplate : ([AnimTemplate], [ResolutionStrategy], Timing)
-// AnimTemplate (Timing, AnimFunction)
 
 </script>
