Fixed early termination bug. Split declarative component of library into separate js file (from test-iterations-declarative example).

--- a/test-iterations-declarative.html
+++ b/test-iterations-declarative.html
@@ -49,18 +49,17 @@
 </style>
 
 <div class="animContainer" id="ca">
-	<div class="anim a"></div>
+	<div class="anim a" id="a"></div>
 	<div class="anim b"></div>
 	<div class="anim c"></div>
 	<div class="anim d"></div>
-	<par startDelay="1" iterationDuration="5" iterationCount="3" speed="2" direction="normal" startTime="1">
-		<animation startDelay="1" iterationDuration="1" iterationCount="2" fill="none" prop="left" from="100px" to="200px" speed="0.8" startTime="1" resolutionStrategy="selector: .a"></animation>		
+	<par startDelay="1" iterationDuration="5" iterationCount="3" speed="2" direction="normal" startTime="1" id="par">
+		<animation startDelay="1" iterationDuration="1" iterationCount="2" fill="none" prop="left" from="100px" to="200px" speed="0.8" startTime="1" resolutionStrategy="selector: .a" id="anim"></animation>
 		<animation startDelay="1" iterationDuration="1" iterationCount="2" fill="backwards" prop="left" from="100px" to="200px" speed="0.8"startTime="1" resolutionStrategy="selector: .b"></animation>
 		<animation startDelay="1" iterationDuration="1" iterationCount="2" fill="forwards" prop="left" from="100px" to="200px" speed="0.8" startTime="1" resolutionStrategy="selector: .c"></animation>		
 		<animation startDelay="1" iterationDuration="1" iterationCount="2" fill="both" prop="left" from="100px" to="200px" speed="0.8" startTime="1" resolutionStrategy="selector: .d"></animation>
 	</par>
 </div>
-
 <div class="animContainer" id="cb">
 	<div class="anim a"></div>
 	<div class="anim b"></div>
@@ -73,7 +72,6 @@
 		<animation startDelay="1" iterationDuration="1" iterationCount="2" fill="both" prop="left" from="100px" to="200px" speed="0.8" startTime="1" resolutionStrategy="selector: .d"></animation>
 	</par>
 </div>
-
 <div class="animContainer" id="cc">
 	<div class="anim a"></div>
 	<div class="anim b"></div>
@@ -99,82 +97,6 @@
 		<animation startDelay="1" iterationDuration="1" iterationCount="2" fill="both" prop="left" from="100px" to="200px" speed="0.8" startTime="1" resolutionStrategy="selector: .d"></animation>
 	</par>
 </div>
-
 <script src="prototype.js"></script>
 <script src="web-animation.js"></script>
-<script>
-function attrAsNumber(element, attribute, defaultValue) {
-	if (element.hasAttribute(attribute)) {
-		return Number(element.getAttribute(attribute));
-	}
-	return defaultValue;
-}
-
-function attrAsText(element, attribute, defaultValue) {
-	if (element.hasAttribute(attribute)) {
-		return element.getAttribute(attribute);
-	}
-	return defaultValue;
-}
-
-function attrAsPixelValue(element, attribute, defaultValue) {
-	if (element.hasAttribute(attribute)) {
-		var s = element.getAttribute(attribute);
-		return Number(s.substring(0, s.length - 2));
-	}
-	return defaultValue;
-}
-
-function resolveProperties(elem) {
-	var startDelay = attrAsNumber(elem, "startDelay");
-	var iterationDuration = attrAsNumber(elem, "iterationDuration");
-	var iterationCount = attrAsNumber(elem, "iterationCount");
-	var fill = attrAsText(elem, "fill");
-	var prop = attrAsText(elem, "prop");
-	var from = attrAsText(elem, "from");
-	var to = attrAsText(elem, "to");
-	var speed = attrAsNumber(elem, "speed");
-	var startTime = attrAsNumber(elem, "startTime");
-	var direction = attrAsText(elem, "direction");
-	var resolutionStrategy = attrAsText(elem, "resolutionStrategy");
-	return {startDelay: startDelay, iterationDuration: iterationDuration, iterationCount: iterationCount, 
-					  fill: fill, prop: prop, from: from, to: to, speed: speed, direction: direction, startTime: startTime,
-					  resolutionStrategy: resolutionStrategy};
-}
-
-function instantiateElem(elem) {
-	var properties = resolveProperties(elem);
-	var instantiator = elem.tagName == "ANIMATION" ? AnimTemplate : (elem.tagName == "PAR" ? ParAnimGroupTemplate : SeqAnimGroupTemplate);
-	elem.template = new instantiator(properties, properties.resolutionStrategy);
-	return properties.startTime;
-}
-
-var animations = document.querySelectorAll("animation");
-for (var i = 0; i < animations.length; i++) {
-	var animation = animations[i];
-	if (animation.parentElement.tagName == "SEQ" || animation.parentElement.tagName == "PAR") {
-		continue;
-	}
-	var startTime = instantiateElem(animation);
-	animation.template.animate(animation.parentElement, startTime);
-}
-
-function instantiateTree(elem) {
-	var startTime = instantiateElem(elem);
-	for (var i = 0; i < elem.children.length; i++) {
-		instantiateTree(elem.children[i]);
-		elem.template.add(elem.children[i].template);
-	} 
-	return startTime;
-}
-
-var groups = document.querySelectorAll("seq, par");
-for (var i = 0; i < groups.length; i++) {
-	var group = groups[i];
-	if (group.parentElement.tagName == "SEQ" || group.parentElement.tagName == "PAR") {
-		continue;
-	}
-	var startTime = instantiateTree(group);
-	group.template.animate(group.parentElement, startTime);
-}
-</script>
+<script src="web-animation-declarative.js"></script>
