Some initial work on a visualization layer for web animations. Bugfix to notify parents when animation currentTime starts.

--- a/demo_example.html
+++ b/demo_example.html
@@ -82,12 +82,14 @@
 	<div class="picture"></div>
 </div>
 
-<svg>
+<svg height="400px">
 	<circle cx="100px" cy="100px" r="20px"/>
 	<circle cx="200px" cy="120px" r="15px"/>
 	<circle cx="130px" cy="315px" r="25px"/>
 	<circle cx="220px" cy="300px" r="20px"/>
 </svg>
+
+<div id="webAnimVisualizeHere"></div>
 
 <script src="prototype.js"></script>
 <script src="web-animation.js"></script>
@@ -200,3 +202,4 @@ function eleventh() {
 	door2.play();
 }
 </script>
+<script src="web-animation-visualization.js"></script>
