Ported web-animation-declarative.js to new API and revived test-iterations-declarative.html in the process. Some more error message improvement.

--- a/test-iterations-declarative.html
+++ b/test-iterations-declarative.html
@@ -69,11 +69,11 @@ limitations under the License.
 	<div class="anim b"></div>
 	<div class="anim c"></div>
 	<div class="anim d"></div>
-	<par startDelay="1" iterationDuration="5" iterationCount="3" speed="2" direction="normal" startTime="1" id="par">
-		<animation startDelay="1" iterationDuration="1" iterationCount="2" fill="none" prop="left" from="100px" to="200px" speed="0.8" startTime="1" resolutionStrategy="selector: .a" id="anim"></animation>
-		<animation startDelay="1" iterationDuration="1" iterationCount="2" fill="backwards" prop="left" from="100px" to="200px" speed="0.8"startTime="1" resolutionStrategy="selector: .b"></animation>
-		<animation startDelay="1" iterationDuration="1" iterationCount="2" fill="forwards" prop="left" from="100px" to="200px" speed="0.8" startTime="1" resolutionStrategy="selector: .c"></animation>		
-		<animation startDelay="1" iterationDuration="1" iterationCount="2" fill="both" prop="left" from="100px" to="200px" speed="0.8" startTime="1" resolutionStrategy="selector: .d"></animation>
+	<par startDelay="1" duration="5" iterationCount="3" playbackRate="2" direction="normal" startTime="1" id="par">
+		<animation startDelay="1" duration="1" iterationCount="2" fill="none" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .a" id="anim"></animation>
+		<animation startDelay="1" duration="1" iterationCount="2" fill="backwards" prop="left" from="100px" to="200px" playbackRate="0.8"startTime="1" resolutionStrategy="selector: .b"></animation>
+		<animation startDelay="1" duration="1" iterationCount="2" fill="forwards" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .c"></animation>		
+		<animation startDelay="1" duration="1" iterationCount="2" fill="both" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .d"></animation>
 	</par>
 </div>
 <div class="animContainer" id="cb">
@@ -81,11 +81,11 @@ limitations under the License.
 	<div class="anim b"></div>
 	<div class="anim c"></div>
 	<div class="anim d"></div>
-	<par startDelay="1" iterationDuration="5" iterationCount="3" speed="2" direction="reverse" startTime="1">
-		<animation startDelay="1" iterationDuration="1" iterationCount="2" fill="none" prop="left" from="100px" to="200px" speed="0.8" startTime="1" resolutionStrategy="selector: .a"></animation>		
-		<animation startDelay="1" iterationDuration="1" iterationCount="2" fill="backwards" prop="left" from="100px" to="200px" speed="0.8"startTime="1" resolutionStrategy="selector: .b"></animation>
-		<animation startDelay="1" iterationDuration="1" iterationCount="2" fill="forwards" prop="left" from="100px" to="200px" speed="0.8" startTime="1" resolutionStrategy="selector: .c"></animation>		
-		<animation startDelay="1" iterationDuration="1" iterationCount="2" fill="both" prop="left" from="100px" to="200px" speed="0.8" startTime="1" resolutionStrategy="selector: .d"></animation>
+	<par startDelay="1" duration="5" iterationCount="3" playbackRate="2" direction="reverse" startTime="1">
+		<animation startDelay="1" duration="1" iterationCount="2" fill="none" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .a"></animation>		
+		<animation startDelay="1" duration="1" iterationCount="2" fill="backwards" prop="left" from="100px" to="200px" playbackRate="0.8"startTime="1" resolutionStrategy="selector: .b"></animation>
+		<animation startDelay="1" duration="1" iterationCount="2" fill="forwards" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .c"></animation>		
+		<animation startDelay="1" duration="1" iterationCount="2" fill="both" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .d"></animation>
 	</par>
 </div>
 <div class="animContainer" id="cc">
@@ -93,11 +93,11 @@ limitations under the License.
 	<div class="anim b"></div>
 	<div class="anim c"></div>
 	<div class="anim d"></div>
-	<par startDelay="1" iterationDuration="5" iterationCount="3" speed="2" direction="alternate" startTime="1">
-		<animation startDelay="1" iterationDuration="1" iterationCount="2" fill="none" prop="left" from="100px" to="200px" speed="0.8" startTime="1" resolutionStrategy="selector: .a"></animation>		
-		<animation startDelay="1" iterationDuration="1" iterationCount="2" fill="backwards" prop="left" from="100px" to="200px" speed="0.8"startTime="1" resolutionStrategy="selector: .b"></animation>
-		<animation startDelay="1" iterationDuration="1" iterationCount="2" fill="forwards" prop="left" from="100px" to="200px" speed="0.8" startTime="1" resolutionStrategy="selector: .c"></animation>		
-		<animation startDelay="1" iterationDuration="1" iterationCount="2" fill="both" prop="left" from="100px" to="200px" speed="0.8" startTime="1" resolutionStrategy="selector: .d"></animation>
+	<par startDelay="1" duration="5" iterationCount="3" playbackRate="2" direction="alternate" startTime="1">
+		<animation startDelay="1" duration="1" iterationCount="2" fill="none" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .a"></animation>		
+		<animation startDelay="1" duration="1" iterationCount="2" fill="backwards" prop="left" from="100px" to="200px" playbackRate="0.8"startTime="1" resolutionStrategy="selector: .b"></animation>
+		<animation startDelay="1" duration="1" iterationCount="2" fill="forwards" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .c"></animation>		
+		<animation startDelay="1" duration="1" iterationCount="2" fill="both" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .d"></animation>
 	</par>
 </div>
 
@@ -106,11 +106,11 @@ limitations under the License.
 	<div class="anim b"></div>
 	<div class="anim c"></div>
 	<div class="anim d"></div>
-	<par startDelay="1" iterationDuration="5" iterationCount="3" speed="2" direction="alternate-reverse" startTime="1">
-		<animation startDelay="1" iterationDuration="1" iterationCount="2" fill="none" prop="left" from="100px" to="200px" speed="0.8" startTime="1" resolutionStrategy="selector: .a"></animation>		
-		<animation startDelay="1" iterationDuration="1" iterationCount="2" fill="backwards" prop="left" from="100px" to="200px" speed="0.8"startTime="1" resolutionStrategy="selector: .b"></animation>
-		<animation startDelay="1" iterationDuration="1" iterationCount="2" fill="forwards" prop="left" from="100px" to="200px" speed="0.8" startTime="1" resolutionStrategy="selector: .c"></animation>		
-		<animation startDelay="1" iterationDuration="1" iterationCount="2" fill="both" prop="left" from="100px" to="200px" speed="0.8" startTime="1" resolutionStrategy="selector: .d"></animation>
+	<par startDelay="1" duration="5" iterationCount="3" playbackRate="2" direction="alternate-reverse" startTime="1">
+		<animation startDelay="1" duration="1" iterationCount="2" fill="none" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .a"></animation>		
+		<animation startDelay="1" duration="1" iterationCount="2" fill="backwards" prop="left" from="100px" to="200px" playbackRate="0.8"startTime="1" resolutionStrategy="selector: .b"></animation>
+		<animation startDelay="1" duration="1" iterationCount="2" fill="forwards" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .c"></animation>		
+		<animation startDelay="1" duration="1" iterationCount="2" fill="both" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .d"></animation>
 	</par>
 </div>
 <script src="http://ajax.googleapis.com/ajax/libs/prototype/1.7.1.0/prototype.js"></script>
