--- a/test-iterations.html
+++ b/test-iterations.html
@@ -104,16 +104,19 @@ var groups = [];
 
 for (var i = 0; i < directions.length; i++) {
 	var dir = directions[i];
-	var group = new ParAnimGroup({startDelay: 1, iterationDuration: 5, iterationCount: 3, speed: 2, direction: dir}, undefined, 1);
+	var group = new ParAnimGroup([], {startDelay: 1, duration: 5, iterationCount: 3, playbackRate: 2, direction: dir}, undefined, 1);
 	groups.push(group);
+}
+
+function sampleFunc(timeFraction, iteration, target) {
+	target.innerHTML = Math.floor(timeFraction * 1000) / 1000 + " : " + iteration
 }
 
 for (var i = 0; i < fills.length; i++) {
 	var divs = document.querySelectorAll(categories[i]);
 	for (var j = 0; j < divs.length; j++) {
-		var anim = new Anim(divs[j], {startDelay: 1, iterationDuration: 1, iterationCount: 2, fill: fills[i], prop: "left", from: "100px", to: "200px", speed: 0.8}, groups[j], 1);
-		new Anim(divs[j], {startDelay: 1, iterationDuration: 1, iterationCount: 2, fill: fills[i], 
-			animFunc: loggerAnimFunction, speed: 0.8}, groups[j], 1);
+		var anim = new Anim(divs[j], {left: ["100px", "200px"]}, {startDelay: 1, duration: 1, iterationCount: 2, fill: fills[i], playbackRate: 0.8}, groups[j], 1);
+		new Anim(divs[j], {sample: sampleFunc}, {startDelay: 1, duration: 1, iterationCount: 2, fill: fills[i], playbackRate: 0.8}, groups[j], 1);
 	}
 }
 // .bDDa
