--- a/web-animation-test.html
+++ b/web-animation-test.html
@@ -73,24 +73,22 @@ limitations under the License.
 <script src="web-animation.js"></script>
 <script>
 
-var anim = new Anim(document.querySelector(".anim"), {startDelay: 2, iterationDuration: 4, prop: "left", from: "100px", to: "200px"}, undefined, 1);
+var anim = new Anim(document.querySelector(".anim"), {left: ["100px", "200px"]}, {startDelay: 2, duration: 4}, undefined, 1);
 
 
-var up = new AnimTemplate({animFunc: keyframesFor("top", "200px", "0px"), timing: new Timing(0, 1)}, "selector: .top");
-var right = new AnimTemplate({animFunc: keyframesFor("left", "0px", "200px"), timing: new Timing(0.5, 1)}, "selector: .right");
-var down = new AnimTemplate({animFunc: keyframesFor("top", "0px", "200px"), timing: new Timing(1, 1)}, "selector: .down");
+var up = new AnimTemplate({top: ["200px", "0px"]}, 1, "selector: .top");
+var right = new AnimTemplate({"left": ["0px", "200px"]}, {startDelay: 0.5, duration: 1}, "selector: .right");
+var down = new AnimTemplate({top: ["0px", "200px"]}, {startDelay: 1, duration: 1}, "selector: .down");
 
-var group = new ParAnimGroupTemplate({});
-group.add(up, right, down);
-
-
+var group = new ParAnimGroupTemplate([up, right, down]);
 group.animate(document.querySelector(".group"), 0);
 
-var group = new SeqAnimGroupTemplate({});
-group.add(new AnimTemplate({animFunc: keyframesFor("left", "100px", "150px"), timing: new Timing(0, 1)}, "target: a"));
-group.add(new AnimTemplate({animFunc: keyframesFor("left", "100px", "150px"), timing: new Timing(0, 1)}, "target: b"));
-group.add(new AnimTemplate({animFunc: keyframesFor("left", "100px", "150px"), timing: new Timing(0, 1)}, "target: c"));
+var group = new SeqAnimGroupTemplate([
+	new AnimTemplate({left: ["100px", "150px"]}, 1, "target: a"),
+	new AnimTemplate({left: ["100px", "150px"]}, 1, "target: b"),
+	new AnimTemplate({left: ["100px", "150px"]}, 1, "target: c")
+]);
 
-group.animate([], 0);
+group.animate([[]], 0); // TODO fix this so that 0 children can be passed here.
 
 </script>
